# sck-core-component

./: README.md  cli.py  pyproject.toml  pytest.ini
core_component/: __init__.py  _version.py  handler.py
core_component/compiler/: __init__.py  compiler.py
core_component/compiler/application/events/actions/: release.actions
core_component/compiler/application/kms/actions/: deploy.actions
core_component/compiler/consumables/AWS/ApplicationLoadBalancer/files/: deploy-pointers.yaml  deploy-resources.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/ApplicationLoadBalancerV2/files/: deploy-pointers.yaml  deploy-resources.yaml  release.yaml
core_component/compiler/consumables/AWS/AutoScale/files/: bake.yaml  release.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/AutoScaleAlbLt/actions/: teardown.actions
core_component/compiler/consumables/AWS/AutoScaleAlbLt/files/: bake.yaml  deploy-pointers.yaml  deploy-resources.yaml
core_component/compiler/consumables/AWS/AutoScaleAlbLt/specs/: AWS_AutoScale.yaml
core_component/compiler/consumables/AWS/AutoScaleAlbLt/userdata/: bake-linux.sh  deploy-windows.ps1
core_component/compiler/consumables/AWS/AutoScaleNoAlb/actions/: deploy.actions  teardown.actions
core_component/compiler/consumables/AWS/AutoScaleNoAlb/files/: bake.yaml  deploy-log-groups.yaml  deploy-resources.yaml  security-items.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/AutoScaleNoAlb/tempactions/: deploy-bake-image-version.actions  deploy-persist-no-pointer-deployment.actions  teardown-bake-image-version.actions
core_component/compiler/consumables/AWS/AutoScaleNoAlb/tempfiles/: deploy-resources-asg.yaml
core_component/compiler/consumables/AWS/AutoScaleNoAlb/userdata/: deploy-windows.ps1
core_component/compiler/consumables/AWS/AutoScaleR53/files/: bake.yaml  deploy-resources.yaml  security-items.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/AutoScaleR53/userdata/: deploy-linux.sh
core_component/compiler/consumables/AWS/AutoScaleSpot/actions/: teardown.actions
core_component/compiler/consumables/AWS/AutoScaleSpot/files/: deploy-pointers.yaml  release.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/AutoScaleV2/files/: bake.yaml  deploy-pointers.yaml  deploy-resources.yaml  release.yaml
core_component/compiler/consumables/AWS/AutoScaleV2/specs/: AWS_AutoScale.yaml
core_component/compiler/consumables/AWS/AutoScaleV2/tempfiles/: deploy-resources-alb.yaml  deploy-resources-nlb.yaml
core_component/compiler/consumables/AWS/AutoScaleV3/files/: bake.yaml  security-items.yaml
core_component/compiler/consumables/AWS/AutoScaleV3/specs/: AWS_AutoScale.yaml
core_component/compiler/consumables/AWS/AutoScaleV3/tempfiles/: deploy-resources-alb.yaml  deploy-resources-clb.yaml  deploy-resources-nlb.yaml
core_component/compiler/consumables/AWS/AutoScaleV3/userdata/: deploy-windows.ps1
core_component/compiler/consumables/AWS/AutoScaleWin/files/: deploy-resources.yaml  security-items.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/AutoScaleWin/specs/: AWS_AutoScaleWin.yaml  Resource_AWS_ElasticLoadBalancingCCP.yaml
core_component/compiler/consumables/AWS/AutoScaleWin/userdata/: bake-linux.sh  deploy-linux.sh
core_component/compiler/consumables/AWS/Cluster/files/: bake.yaml  security-items.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/Cluster/specs/: AWS_Cluster.yaml
core_component/compiler/consumables/AWS/DynamoDB/files/: deploy-pointers.yaml  deploy-resources.yaml  release.yaml  security-items.yaml  security-rules.yaml
core_component/compiler/consumables/AWS/EFS/files/: deploy-pointers.yaml  deploy-resources.yaml
core_component/compiler/consumables/AWS/EFS/specs/: AWS_EFS.yaml
core_component/compiler/consumables/AWS/Image/actions/: deploy.actions  teardown.actions
core_component/compiler/consumables/AWS/Image/files/: bake.yaml  security-items.yaml
core_component/compiler/consumables/AWS/Image/specs/: AWS_Image.yaml
core_component/compiler/consumables/AWS/LoadBalancedInstances/actions/: teardown.actions
core_component/preprocessor/: __init__.py  preprocessor.py
core_component/security_engine/: README.md
core_component/validator/: __init__.py  spec_library.py  validator.py
core_component/validator/specs/: spec.yaml
core_component_compiler/: __init__.py  handler.py
core_component_compiler/compiler/application/events/actions/: deploy.actions  teardown.actions
core_component_compiler/compiler/application/kms/files/: kms-resources.yaml
core_component_compiler/security_engine/: __init__.py  security.py
core_component_compiler/validator/: validator.py
tests/: consumables_list.txt  data_for_testing.py  test_compiler.py  test_samples.py  test_validator.py
tests/components/: s3-bucket-quickstart.yaml
tests/samples/: s3-bucket-quickstart.yaml  serverless-s3-subscriptions.yaml
tests/vars/: sampe-vars.yaml
(+343 files in other folders)
