[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "core-component-compiler"
description = "Core-Automation Component Compiler"
version = "0.1.0"
license = "GPL-3.0-only"
readme = "README.md"
authors = [ "James Barwick <jbarwick@me.com>",]
maintainers = [ "James Barwick <jbarwick@me.com>",]
keywords = [ "core-automation", "core", "sck",]

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.124"
netaddr = "^1.2.1"
pyyaml = "^6.0.1"
pyyaml-include = "^2.1"
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
poetry = "^1.8.3"
types-pyyaml = "^6.0.12.20240311"
boto3-stubs = "^1.34.115"
types-tabulate = "^0.9.0.20240106"

[tool.poetry.dependencies.core-framework]
path = "../core-framework"
develop = true

[tool.poetry.dependencies.core-db]
path = "../core-db"
develop = true

[tool.poetry-dynamic-versioning.files."core_component_compiler/_version.py"]
persistent-substitution = true
initial-content = "  \"\"\"\n  This is the version informatooin for this template\n  \"\"\"\n  __version__ = \"0.0.0\"\n  __version_tuple__ = (0, 0, 0)\n"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pylance = "^0.11.0"
pylint = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
cfn-lint = "^1.18.4"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
types-jmespath = "^1.0.2.20240106"
