[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-component"
description = "Core-Automation Component Compiler"
version = "0.0.3"
license = "GPL-3.0-only"
readme = "README.md"
authors = [ "James Barwick <jbarwick@me.com>",]
maintainers = [ "James Barwick <jbarwick@me.com>",]
keywords = ["sck", "core", "aws", "cloud", "automation"]
include = ["core_component/_version.py"]

[[tool.poetry.packages]]
include = "core_component"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.35.87"
botocore = ">=1.35.87"
netaddr = "^1.3.0"
pyyaml = "^6.0.2"
pyyaml-include = "^2.1"
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"

[tool.poetry.dependencies.sck-core-db]
path = "../sck-core-db"
develop = true

[tool.poetry.dependencies.sck-core-framework]
path = "../sck-core-framework"
develop = true
[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry-dynamic-versioning.files."core_component/_version.py"]
persistent-substitution = true
initial-content = "  \"\"\"\n  This is the version informatooin for this template\n  \"\"\"\n  __version__ = \"0.0.0\"\n  __version_tuple__ = (0, 0, 0)\n"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.5"
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
cfn-lint = "^1.18.4"
black = "^24.10.0"
pylance = "^0.21.0"
boto3-stubs = ">=1.35.87"
types-pyyaml = "^6.0.12.20240917"
types-jmespath = "^1.0.2.20240106"
types-tabulate = "^0.9.0.20240106"
