[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-component"
description = "Core-Automation Component Compiler"
version = "0.0.8"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["James Barwick <jbarwick@me.com>"]
maintainers = ["James Barwick <jbarwick@me.com>"]
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_component"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.39.9"
botocore = ">=1.39.9"
netaddr = "^1.3.0"
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"
sck-core-framework = "^0.0.8"
sck-core-db = "^0.0.8"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["core_component/__init__.py"]

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.5"
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
cfn-lint = "^1.22.3"
black = "^24.10.0"
pylance = "^0.21.0"
boto3-stubs = ">=1.39.9"
types-jmespath = "^1.0.2.20240106"
